Added conditions for when user is not on a youtube page with an active playlist

--- a/view.html
+++ b/view.html
@@ -1,9 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
     <head>
-        <link rel="stylesheet" href="./view.css">
+        <link href="view.css" rel="stylesheet" type="text/css" />
         <script type="module" src="view.js"></script>
     </head>
+
     <body>
-        <p>YouTube Playlist Recorder</p>
+        <div class="root_"></div>
     </body>
+
 </html>
+
