--- a/view.html
+++ b/view.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
     <head>
         <link href="view.css" rel="stylesheet" type="text/css" />
+        <script type="module" src="backgroundServices.js" async></script>
         <script type="module" src="view.js"></script>
     </head>
 
