--- a/view.html
+++ b/view.html
@@ -9,6 +9,7 @@
 
     <body>
         <div class="root_"></div>
+        <a download="playlist.txt" class="download-link" style="display: none">Download</a>
     </body>
 
 </html>
